--- a/css/reset.css
+++ b/css/reset.css
@@ -2,10 +2,38 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 
 h1, h2, h3, table, td, th, tr, li, ol, ul, form, input, button {box-sizing:border-box;}
+h1, h2, p, div, span {padding:0; margin:0;}
 li, ul, ol {list-style: none; margin:0; padding:0;}
 a {text-decoration: none;}
 
 .hidden {
     display:none;
     text-indent:-9999px;
+}
+
+/* header */
+/* header menu */
+.header_menu {
+    display:flex;
+    justify-content: space-between;
+}
+
+/* menu tab */
+.menu_tab {
+    display:none;
+    position:fixed;
+    width:30%;
+    height:80vh;
+    opacity:0.8;
+}
+.menu_tab ul {
+    margin-top:10%;
+}
+.menu_tab li {
+    text-align:center;
+    color: white;
+    padding:5% 0;
+}
+#menu_tab_btn {
+    cursor:pointer;
 }
