--- a/css/compound.css
+++ b/css/compound.css
@@ -4,10 +4,6 @@
     display: none;
 }
 
-.select_btn {
-    background: #ccc;
-}
-
 .installment div label {
     width:30%;
     text-align:center;
@@ -27,9 +23,6 @@
     font-size:0.8rem;
 }
 
-.accumulate {
-    display:none;
-}
 .accumulate div label {
     width:30%;
     text-align:center;
@@ -44,4 +37,5 @@
     .col-md-6 h2 {display:block;}
     .select_btn {display:none;}
     .accumulate {display: block;}
+    .installment {display: block;}
 }
