--- a/css/reset.css
+++ b/css/reset.css
@@ -5,6 +5,7 @@ h1, h2, h3, table, td, th, tr, li, ol, ul, form, input, button {box-sizing:borde
 h1, h2, p, div, span {padding:0; margin:0;}
 li, ul, ol {list-style: none; margin:0; padding:0;}
 a {text-decoration: none; color:black;}
+html {font-size:62.5%;}
 
 .hidden {
     display:none;
@@ -13,20 +14,31 @@ a {text-decoration: none; color:black;}
 
 /* header */
 /* header menu */
+header .row{
+    margin-top:0;
+}
 .header_menu {
-    height:6vh;
+    height:6vmin;
     display:flex;
     justify-content: space-around;
     align-items: center;
 }
+.header_menu p {
+    font-size:1.2rem;
+}
 
 /* menu tab */
+.main {
+    height:80vmin;
+}
+
 .menu_tab {
+    top:6vmin;
     display:none;
     position:fixed;
     width:30%;
-    height:80vh;
-    opacity:0.8;
+    height:70vmin;
+    z-index: 1;
 }
 .menu_tab ul {
     margin-top:10%;
@@ -37,6 +49,9 @@ a {text-decoration: none; color:black;}
     color: white;
     padding:5% 0;
 }
+.menu_tab li a {
+    font-size:1.5rem;
+}
 #menu_tab_btn {
     cursor:pointer;
 }
@@ -44,6 +59,7 @@ a {text-decoration: none; color:black;}
 /* footer */
 .footer_menu {
     display: flex;
+    padding:0px;
 }
 .footer_menu li {
     width:25%;
@@ -52,6 +68,7 @@ a {text-decoration: none; color:black;}
 .footer_menu a{
     display:block;
     text-align:center;
+    font-size:1.8rem;
 }
 .footer_menu li:hover{
     background-color:#999;
@@ -60,5 +77,5 @@ a {text-decoration: none; color:black;}
     color:white;
 }
 .footer_menu a i{
-    font-size:2rem;
+    font-size:3rem;
 }
