--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ blockquote{
     margin:auto;
     margin-top:5%;
     font-size:1.2rem;
+    overflow: hidden;
 }
 .menu_btn .btn {
     width:80%;
